@@ -1,5 +1,8 @@
 2013-09-20  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/sample-editor.c: Compilation with audiofile is fixed;
+	* app/audio.c, app/audio.h, app/audioconfig.c, app/drivers/file-output.c:
+	File output driver is now configurable (samplerate and number of channels),
+	sndfile and audiofile variants share a lot of code.
 
 2013-09-18  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/track-editor.c: Buffer overflow is fixed (utf-8 strings require
